<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:paddingStart="@dimen/padding"
        android:paddingEnd="@dimen/padding">

    <TextView
            android:layout_gravity="center"
            android:id="@+id/name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_name"
            android:textAlignment="center"
            style="@style/NameStyle"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/nickname"
            style="@style/NameStyle"
            android:textAlignment="center"
            android:hint="@string/what_is_your_nickname"/>
    <Button
            android:layout_gravity="center_horizontal"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/done_button"/>
    <TextView
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/what_is_your_nickname" style="@style/NameStyle"
            android:textAlignment="center" android:visibility="gone"/>
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/btn_star_big_on"
            android:id="@+id/star_image"
            android:contentDescription="@string/yellow_star"
            android:layout_marginTop="@dimen/layout_margin"/>

    <ScrollView
            android:layout_marginTop="@dimen/layout_margin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/bio_scroll">

        <TextView
                android:lineSpacingMultiplier="1.2"
                android:text="@string/bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bio_text"
                style="@style/NameStyle"/>
    </ScrollView>
</LinearLayout>